--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ go.work
 
 # Temporary data directory (TODO: remove this)
 /data
+
+# Don't save the file stores (we should be using MongoDB anyway)
+/store
